# Animated-plasma-task

./: CMakeLists.txt  PKGBUILD  README.md  READMECN.md
kickoff-skyler/: ApplicationsPage.qml  main.qml  metadata.json
taskmanager-skyler/: CMakeLists.txt
taskmanager-skyler/qml/: AudioStream.qml  Task.qml  TaskBadgeOverlay.qml  TaskList.qml  main.qml
